# inside-transformer

./: LICENSE  README.md  main.py  pyproject.toml  test.py  utils.py
notebooks/: NWKernel.ipynb  transformer.ipynb
notebooks/00_Preface/: Preparation.ipynb  Preparation.py
notebooks/01_SingleHeadSelfAttention/: SingleHeadSelfAttention.ipynb  SingleHeadSelfAttention.py
notebooks/02_MulitHandAttention/: MulitHandAttention.ipynb  MulitHandAttention.py
notebooks/02_MultiHeadAttention/: MultiHeadAttention.ipynb
notebooks/02_SelfAttentionWithRoPE/: SelfAttentionWithRoPE.ipynb
notebooks/03_AttentionWithRoPE/: AttentionWithRoPE.ipynb  AttentionWithRoPE.py
notebooks/03_MulitHandAttention/: MulitHandAttention.ipynb  MulitHandAttention.py
notebooks/04_TransformerBlock/: TransformerBlock.ipynb  TransformerBlock.py
notebooks/04_TransformerEncoder/: TransformerEncoder.ipynb
notebooks/05_TransformerDecoder/: TransformerDecoder.ipynb
notebooks/05_TransformerEncoder/: TransformerEncoder.ipynb  TransformerEncoder.py
src/: MaskMultiHeadAttention.py  MultiHeadAttention.py  SelfAttention.py  Tokenizer.py  Transformer.py  TransformerDecoder.py  TransformerEncoder.py
