[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
